@@ -3,6 +3,8 @@ Revision history for Cassandra-Client
 0.15    unreleased
 
       * Implement stricter timeout checks in case nodes go away
+      * The client now defaults to protocol version 4. A backwards-compatible
+        protocol_version argument was added.
 
 0.14    2017/11/27
 
